Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19047

ClangStaticAnalyzer: Displaying errors end up as warning inside Issues Pane

XMLWordPrintable

    • d6a6d356bbdca91773544ef6dfa2c5ef5370431d (qt-creator/qt-creator/4.9)

      Steps to reproduce:

      • create a Widget Application from template
      • set android kit as current target [if set to a Desktop kit this works]
      • run the clang static analyzer on this project

      Current result:

      • I'm getting warnings on the Issues pane (one of the warnings states:
        fatal error: too many errorsĀ emitted, stopping now [-ferror-limit=]
        20 errors generated

        (see also attached file)

      • final issue is an error:
        Clang Static Analyzer: Not all files could be analyzed.
      • the summary [on the Debugger/CSA-toolbar] still displays "Clang Static Analyzer finished. No issues found."

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            cstenger Christian Stenger
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes