ClangTools: Add errors as errors to issues pane

Fixes: QTCREATORBUG-19047
Change-Id: I4aca248d1ccb625fef77632bf35b554d7441e5cc
Reviewed-by: Christian Stenger <christian.stenger@qt.io>